--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.version>3.3.9</maven.version>
     <jmh.version>1.19</jmh.version>
     <javac.target>1.8</javac.target>
   </properties>
